# x-cells

./: .gitignore  NETWORK_SIMULATION.md  README.md  c-proto-gen.sh  go-proto-gen.sh  go.mod  go.sum  monitor_fds.sh  package-lock.json  start.sh  telemetry_commands.md  test-frontend.html  test_network_sim.sh
backend/: INTEGRATION_GUIDE.md  INTEGRATION_SUCCESS.md  README_COLLISION_SYSTEM.md  README_GAMETICK_ARCHITECTURE.md  README_MONITORING_GUIDE.md  colliderdispatcher.go  collision_example.go  foodsystem.go  game_systems.go  gametick.go  gametick_demo.go  main_collision_demo.go  monitoring_examples.go
backend/cmd/: main.go
backend/cmd/bot/: README.md  main.go  run_multiple_bots.sh
backend/cmd/server/: main.go
backend/cmd/server/static/: index.html  tree.html
backend/cmd/server/static/js/: ammo.wasm.js
backend/cmd/static/: bundle.1c5def1687d4985c4ffa.js  index.html
backend/cmd/static/ammo/: ammo.wasm.js
backend/cmd/test-client/: main.go
backend/internal/adapter/in/ws/: message_types.go  world_service_adapter.go  ws_adapter.go
backend/internal/core/domain/entity/: gameobject.go  world.go
backend/internal/core/domain/service/: world_service.go
backend/internal/core/port/in/worldmanagement/: world_port.go
backend/internal/game/: collision_manager.go  collision_system.go  food_system.go  simple_food_system.go  simple_food_system_test.go  systems.go  ticker.go
backend/internal/physics/: client.go  config.go
backend/internal/serialize/: ws.go
backend/internal/telemetry/: telemetry.go
backend/internal/transport/: grpc.go  interface.go  websocket.go
backend/internal/transport/ws/: README.md  control_handler.go  handlers.go  impulse.go  messages.go  messages_test.go  network_simulation.go  player_manager.go  safe_writer.go  safe_writer_test.go  serialize.go  server.go  streaming.go  types.go
backend/internal/world/: factory.go  manager.go  physics_config.go  terrain._go  terrain.go  test_objects.go  types.go
bullet-server/: CMakeLists.txt  build.sh  main.cpp  phy.proto  physics.grpc.pb.cc  physics.grpc.pb.h  physics.pb.cc  physics.pb.h  physics.proto
bullet-server/src/: main.cpp
cmd/server/: main.go
cmd/server/static/: index.html
proto/: c-proto-gen.sh  go-proto-gen.sh  physics.pb.go  physics.proto  physics_grpc.pb.go
web/: ammo-test.html  ammo.js  build.sh  diagnostic_commands.md  index-test.html  index.html  package-lock.json  package.json  webpack.config.js
web/public/: index.html
web/src/: ammo-test.js  applySpeedLimits.test.js  camera.js  diagnostics.js  eyes.js  gamepad.js  gamestatemanager.js  index.js  network.js  objects.js  physics.js  physics_old.js  scene.js  simple-food-client.js  telemetry.js  telemetry_ui.js  three-exports.js  throttledlog.js  ui.js  visualController.js
web/test/: ammo-test.html
